# whatgameisthat

./: .gitignore  README.md  pyproject.toml  search.py
src/whatgameisthat/: search.py
