# most basic requirement of creating a package
[project]
name = "whatgameisthat"
version = "0.0.0"
description = "CLI package that returns game information using IGDB's API"
readme = "README.md"
dependencies = [
    "python-dotenv >=1.2.1", 
    "requests >= 2.32.5"
    ]

# below is important for turning into a cli app
[build-system]
requires = ["setuptools >= 77.0.3"]
build-backend = "setuptools.build_meta"

# command is "wgit"
# when wgit is entered, run the main() function in search(.py) under the whatgameisthat package (folder)
[project.scripts]
wgit = "whatgameisthat.search:main"